fix nav hover/active states with letter-spacing

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -251,7 +251,7 @@ body.nav-open {
       }
       &:hover,
       &:focus,
-      &.active {
+      &.-active {
         span {
           &::after {
             letter-spacing: 0.25em;
